# CloudInferOps

./: .codecov.yml  .gitignore  .golangci.json  .pre-commit-config.yaml  00_START_HERE.md  1.sh  2.sh  BUILD_REPORT.md  CLOUDINFEROPS_MIGRATION_PLAN.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DELIVERY.txt  Dockerfile.ui  Dockerfile.webhook  LICENSE  PHASE_2_3_FLOW.md  PROJECT_VISION.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  coverage.out  go.mod  go.sum  golangci.json  main.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pre-commit.yml  release.yml
api/: pyproject.toml  requirements.txt
api/app/: main.py  metrics.py  router.py  schemas.py  tracing.py
api/app/providers/: base.py  ollama.py  vllm.py
api/tests/: test_chat.py  test_models.py  test_router.py
cmd/: enable.go  integrate.go  root.go  up.go  up_test.go
cmd/cloudinferops/: main.go
cmd/stackpulse/: main.go
cmd/ui/: main.go
cmd/webhook/: main.go
deployments/kubernetes/: gateway-deployment.yaml  gateway-ingress.yaml  gateway-service.yaml  model-config.yaml  namespace.yaml  ollama-deployment.yaml  ollama-service.yaml  ui-deployment.yaml  ui-ingress.yaml
docs/: commands.md  ui-roadmap.md
helm/stackpulse/: Chart.yaml
internal/alerts/: secrets.go  secrets_test.go
internal/aws/: aws.go
internal/cli/: alerts.go  alerts_test.go  connect.go  (+34 more)
scripts/: install.sh  reset-multipass.sh  reset_stackpulse.sh  setup-hooks.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
(+81 files in other folders)
